# soccer-analysis-final

./: .gitattributes  .gitignore  Makefile  PROJECT_SCOPE.md  README.md  pyproject.toml
artifacts/final_run/: DATA_CARD.md  MODEL_CARD.md  RUN_SUMMARY.md  artifact_manifest.json  calibration_bins.csv  confusion_matrix.csv  cv_results.csv  feature_importance.csv  metrics.json  model.joblib  predictions.csv  temperature_results.csv
data/: README.md
data/derived/: prematch_features.parquet
data/input/: dataset_manifest.json  matches.parquet
paper/: README.md  main.tex  references.bib
presentation/: HARDWARE.md  README.md  RESULTS.md
presentation/models/: yolov8m_metadata.json
presentation/output/: argentina_switzerland_prediction_200mb.summary.json  argentina_switzerland_prediction_50mb.summary.json
presentation/results/: run_manifest.json
presentation/source/: source_metadata.json
scripts/: verify_artifacts.py  verify_presentation.py
site/: README.md  package.json  pnpm-lock.yaml
site/.openai/: hosting.json
site/app/: globals.css  layout.tsx  page.tsx
site/tests/: rendered-html.test.mjs
src/soccer_final/: __init__.py  artifacts.py  data.py  experiment.py  features.py  presentation_video.py
tests/: test_artifact_verification.py  test_experiment.py  test_features.py  test_presentation_video.py
