[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "soccer-analysis-final"
version = "1.0.0"
description = "Reproducible final project on calibrated prematch soccer outcome prediction"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = ["pymupdf>=1.24", "pytest>=8", "ruff>=0.5"]
video = [
  "certifi>=2026.7.22",
  "opencv-python-headless>=4.10",
  "torch>=2.7",
  "torchvision>=0.22",
  "ultralytics>=8.3",
  "yt-dlp>=2026.7.1",
]

[project.scripts]
soccer-final = "soccer_final.experiment:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
